MDEV-34814 mysqld hangs on startup when --init-file target does not exist

Ensure that select_thread_in_use is cleared before calling unireg_abort(),
otherwise when unireg_abort() calls wait_for_signal_thread_to_end(), it
will block indefinitely.  Factored this common pattern in mysqld_main to
a helper function to ensure this is done uniformly.